Fixed responsive issue of navbar checkin status on mobile screens

--- a/hr_time/public/scss/checkin_status.scss
+++ b/hr_time/public/scss/checkin_status.scss
@@ -14,6 +14,9 @@
   margin-top: 4px;
   margin-left: 10px;
   cursor: pointer;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .datatable .checkin_status {
